[fix] jump to question list (#5507)
* [fix] jump to question list

This fixes the problem that the "Back to question list" buttons do not jump to the beginning of the question list, but to the end.

* restore jump to question behaviour

* [add] Scroll-margin 

The scroll margin is used to fix HTML-Anchor calculation. I Suspect the breadcrumb is added to the page layout for the Anchor point calculation.

* [add] ITCSS compatible scroll-margin

* [rmv] inline style

---------

--- a/templates/default/070-components/legacy/Modules/_component_test.scss
+++ b/templates/default/070-components/legacy/Modules/_component_test.scss
@@ -105,3 +105,8 @@ $il-test-working-time-font-weight: $il-font-weight-bold;
         margin-bottom: $il-test-padding-large-vertical;
     }
 }
+
+// table row scroll margin correction
+#tst_pass_details_overview tr {
+    scroll-margin-top: 30px;
+}
